log size fixed on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -564,6 +564,10 @@ video {
   left: 0px;
 }
 
+.left-1\/2 {
+  left: 50%;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -578,10 +582,6 @@ video {
 
 .top-1\/2 {
   top: 50%;
-}
-
-.left-1\/2 {
-  left: 50%;
 }
 
 .z-20 {
@@ -609,10 +609,6 @@ video {
   display: block;
 }
 
-.inline {
-  display: inline;
-}
-
 .flex {
   display: flex;
 }
@@ -629,25 +625,12 @@ video {
   height: 0px;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
 .h-12 {
   height: 3rem;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
+.h-4 {
+  height: 1rem;
 }
 
 .h-fit {
@@ -655,8 +638,16 @@ video {
   height: fit-content;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .max-h-\[calc\(100vh-4rem-1\.33rem\)\] {
   max-height: calc(100vh - 4rem - 1.33rem);
+}
+
+.max-h-\[100vh\] {
+  max-height: 100vh;
 }
 
 .min-h-0 {
@@ -667,8 +658,8 @@ video {
   width: 0px;
 }
 
-.w-1\/4 {
-  width: 25%;
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-4\/5 {
@@ -688,50 +679,6 @@ video {
   width: max-content;
 }
 
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-1\/5 {
-  width: 20%;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-5\/12 {
-  width: 41.666667%;
-}
-
-.w-2\/4 {
-  width: 50%;
-}
-
 .max-w-\[100vh\] {
   max-width: 100vh;
 }
@@ -744,21 +691,21 @@ video {
   flex-grow: 0;
 }
 
-.origin-top {
-  transform-origin: top;
-}
-
 .origin-right {
   transform-origin: right;
 }
 
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.origin-top {
+  transform-origin: top;
 }
 
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -796,10 +743,6 @@ video {
   align-items: flex-start;
 }
 
-.items-end {
-  align-items: flex-end;
-}
-
 .items-center {
   align-items: center;
 }
@@ -816,12 +759,8 @@ video {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
-.justify-evenly {
-  justify-content: space-evenly;
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .gap-2 {
@@ -838,16 +777,6 @@ video {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -872,6 +801,10 @@ video {
   text-wrap: nowrap;
 }
 
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -884,10 +817,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
 .rounded-b-xl {
   border-bottom-right-radius: 0.75rem;
   border-bottom-left-radius: 0.75rem;
@@ -896,15 +825,6 @@ video {
 .rounded-l-lg {
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -933,8 +853,9 @@ video {
   padding: 0.75rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .px-10 {
@@ -960,11 +881,6 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .pr-0 {
@@ -1340,16 +1256,13 @@ video {
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.data-\[challenge-on\]\:hidden[data-challenge-on] {
-  display: none;
-}
-
-.data-\[challenge-true\]\:hidden[data-challenge-true] {
-  display: none;
-}
-
 .data-\[challenge\=true\]\:hidden[data-challenge=true] {
   display: none;
+}
+
+.data-\[challenge\=true\]\:rounded-b-xl[data-challenge=true] {
+  border-bottom-right-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
 }
 
 @media (min-width: 640px) {
@@ -1358,8 +1271,8 @@ video {
     margin-right: auto;
   }
 
-  .sm\:w-auto {
-    width: auto;
+  .sm\:max-h-\[calc\(100vh-4rem-1\.33rem\)\] {
+    max-height: calc(100vh - 4rem - 1.33rem);
   }
 
   .sm\:w-1\/2 {
@@ -1370,12 +1283,12 @@ video {
     width: 25%;
   }
 
-  .sm\:flex-row {
-    flex-direction: row;
+  .sm\:w-auto {
+    width: auto;
   }
 
-  .sm\:flex-col {
-    flex-direction: column;
+  .sm\:flex-row {
+    flex-direction: row;
   }
 
   .sm\:items-end {
@@ -1384,10 +1297,6 @@ video {
 
   .sm\:justify-between {
     justify-content: space-between;
-  }
-
-  .sm\:gap-1 {
-    gap: 0.25rem;
   }
 
   .sm\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
@@ -1419,11 +1328,6 @@ video {
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
-  }
-
-  .data-\[challenge\=true\]\:sm\:rounded-b-xl[data-challenge=true] {
-    border-bottom-right-radius: 0.75rem;
-    border-bottom-left-radius: 0.75rem;
   }
 }
 
@@ -1482,10 +1386,6 @@ video {
 
   .lg\:justify-center {
     justify-content: center;
-  }
-
-  .lg\:gap-2 {
-    gap: 0.5rem;
   }
 
   .lg\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
